[package]
name = "gymnust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.1", default-features = false }
rand = "0.8.5"
rand_xoshiro = "0.6.0"

# Enable `candle` feature to use the `candle` module
[features]
default = ['cuda']
cuda = ["candle-core/cuda"]
cudnn = ["candle-core/cudnn"]
mkl = ["candle-core/mkl"]
accelerate = ["candle-core/accelerate"]
metal = ["candle-core/metal"]
